[project]
name = "techbook18"
version = "0.1.0"
description = "techbook18"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "sympy>=1.13.1",
]

[tool.poetry]
